--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import 'tailwindcss';
 @theme {
         --color-navBlue1: #588CD4;
@@ -5,7 +6,15 @@
         --color-navBlue3: #588CD4;
         --color-navBlue4: #8CB0E2;
         --color-navIndigo:#2F18AA;
+        --color-footerVioletLight:#7C3AED4D;
+        --color-footerVioletDark:#7C3AED26;
+        --color-subBannerBg:#797497;
+        --color-bgViolet:#29205b;
+        --color-infoCardBg:#777295B3;
+
 }
+
+
 .nav-gradient {
     background: linear-gradient(
         to right,
@@ -19,12 +28,22 @@
 }
 
 
+.gradient-section{
+    background:radial-gradient(
+  ellipse at 50% 60%,
+  #b2b1b3 0%,     /* medium violet center */
+  #6c5c88 20%,     /* deeper violet mid */
+  #181140 100%     /* dark purple edge */
+);
+    min-height: 100vh;
+}
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    --font-sans: 'Roboto', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
